src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__rdna__tests__parse_7800xt_full.snap
---
source: src/gpu_handle/overdrive/rdna.rs
expression: table
---
current_sclk_range:
  min: 500
  max: 2660
sclk_offset: ~
current_mclk_range:
  min: 97
  max: 1219
vddc_curve: []
voltage_offset: 0
od_range:
  sclk:
    min: 500
    max: 5000
  sclk_offset: ~
  mclk:
    min: 97
    max: 1500
  curve_sclk_points: []
  curve_voltage_points: []
  voltage_offset:
    min: -450
    max: 0
