src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__rdna__tests__parse_phoenix_full.snap
---
source: src/gpu_handle/overdrive/rdna.rs
expression: table
---
current_sclk_range:
  min: 800
  max: 2700
sclk_offset: ~
rdna4_sclk_offset_workaround: false
current_mclk_range:
  min: ~
  max: ~
vddc_curve: []
voltage_offset: ~
od_range:
  sclk:
    min: 800
    max: 2700
  sclk_offset: ~
  mclk: ~
  curve_sclk_points: []
  curve_voltage_points: []
  voltage_offset: ~
