src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__rdna__tests__parse_vangogh_full.snap
---
source: src/gpu_handle/overdrive/rdna.rs
expression: table
---
current_sclk_range:
  min: 1600
  max: 1600
sclk_offset: ~
current_mclk_range:
  min: ~
  max: ~
vddc_curve: []
voltage_offset: ~
od_range:
  sclk:
    min: 200
    max: 1600
  sclk_offset: ~
  mclk: ~
  curve_sclk_points: []
  curve_voltage_points: []
  voltage_offset: ~
