src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__rdna__tests__set_clock_offset_9070xt.snap
---
source: src/gpu_handle/overdrive/rdna.rs
expression: table.get_commands(&table.clone().into()).unwrap()
---
- s 1 200
- vo -50
