src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__rdna__tests__set_max_values_6800.snap
---
source: src/gpu_handle/overdrive/rdna.rs
expression: table.get_commands(&table.clone().into()).unwrap()
---
- s 1 2400
- m 1 1050
- vo 10
